fix(client): the video player doesn't stretch videos anymore, and there is no more cut at the bottom

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
 
 .screen {
   height: 100vh;
+  width: 100%;
   background-color: #000;
   display: grid;
   place-items: center;
